--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "ajv": "^6.0.0",
     "ajv-keywords": "^3.1.0",
+    "dotenv": "^5.0.1",
+    "dotenv-expand": "^4.2.0",
     "npm": "^5.7.1",
     "react": "^16.2.0",
     "react-beautiful-dnd": "^6.0.0",
